Parser/Grammars/.antlr/TeuchiUdonParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:\MyDocuments\UnityProjects\TeuchiUdon\Parser\Grammars\TeuchiUdonParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


    #pragma warning disable 3021

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class TeuchiUdonParser : TeuchiUdonBaseParser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BYTE_ORDER_MARK=1, SINGLE_LINE_COMMENT=2, DELIMITED_COMMENT=3, NEWLINE=4, 
		WS=5, TAB=6, AS=7, BREAK=8, CASE=9, CAST=10, CONTINUE=11, DATA=12, DO=13, 
		ELIF=14, ELSE=15, FOR=16, HIDING=17, IMPORT=18, IF=19, IN=20, IS=21, LET=22, 
		LOOP=23, MODULE=24, MUT=25, NEWTYPE=26, OF=27, REF=28, RETURN=29, THEN=30, 
		TYPEOF=31, WHILE=32, YIELD=33, PUBLIC=34, SYNC=35, LINEAR=36, SMOOTH=37, 
		NULL_LITERAL=38, BOOL_LITERAL=39, THIS_LITERAL=40, IDENTIFIER=41, INTEGER_LITERAL=42, 
		HEX_INTEGER_LITERAL=43, BIN_INTEGER_LITERAL=44, REAL_LITERAL=45, CHARACTER_LITERAL=46, 
		REGULAR_STRING=47, VERBATIUM_STRING=48, INTERPOLATED_REGULAR_STRING_START=49, 
		OPEN_BRACE=50, CLOSE_BRACE=51, OPEN_PAREN=52, CLOSE_PAREN=53, OPEN_BRACKET=54, 
		CLOSE_BRACKET=55, OPEN_ARRAY=56, CLOSE_ARRAY=57, DOT=58, COMMA=59, COLON=60, 
		SEMICOLON=61, PLUS=62, MINUS=63, STAR=64, DIV=65, PERCENT=66, AMP=67, 
		PIPE=68, CARET=69, BANG=70, TILDE=71, BIND=72, LT=73, GT=74, WILDCARD=75, 
		INTERR=76, OP_COALESCING=77, OP_COALESCING_ACCESS=78, OP_AND=79, OP_OR=80, 
		OP_ARROW=81, OP_EQ=82, OP_NE=83, OP_LE=84, OP_GE=85, OP_ASSIGNMENT=86, 
		OP_LEFT_SHIFT=87, OP_RIGHT_SHIFT=88, OP_LEFT_PIPELINE=89, OP_RIGHT_PIPELINE=90, 
		OP_RANGE=91, OP_SPREAD=92, OPEN_BRACE_INSIDE=93, DOUBLE_QUOTE_INSIDE=94, 
		REGULAR_STRING_INSIDE=95;
	public const int
		RULE_target = 0, RULE_body = 1, RULE_topStatement = 2, RULE_varAttr = 3, 
		RULE_varBind = 4, RULE_varDecl = 5, RULE_qualifiedVar = 6, RULE_identifier = 7, 
		RULE_statement = 8, RULE_expr = 9, RULE_iterExpr = 10, RULE_argExpr = 11, 
		RULE_forBind = 12, RULE_forIterExpr = 13, RULE_isoExpr = 14, RULE_literal = 15, 
		RULE_thisLiteral = 16, RULE_interpolatedRegularString = 17, RULE_interpolatedRegularStringPart = 18;
	public static readonly string[] ruleNames = {
		"target", "body", "topStatement", "varAttr", "varBind", "varDecl", "qualifiedVar", 
		"identifier", "statement", "expr", "iterExpr", "argExpr", "forBind", "forIterExpr", 
		"isoExpr", "literal", "thisLiteral", "interpolatedRegularString", "interpolatedRegularStringPart"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\u00EF\u00BB\u00BF'", null, null, null, null, null, "'as'", "'break'", 
		"'case'", "'cast'", "'continue'", "'data'", "'do'", "'elif'", "'else'", 
		"'for'", "'hiding'", "'import'", "'if'", "'in'", "'is'", "'let'", "'loop'", 
		"'module'", "'mut'", "'newtype'", "'of'", "'ref'", "'return'", "'then'", 
		"'typeof'", "'while'", "'yield'", "'@public'", "'@sync'", "'@linear'", 
		"'@smooth'", "'null'", null, "'this'", null, null, null, null, null, null, 
		null, null, null, "'{'", "'}'", "'('", "')'", "'['", "']'", "'[|'", "'|]'", 
		"'.'", "','", "':'", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", 
		"'|'", "'^'", "'!'", "'~'", "'='", "'<'", "'>'", "'_'", "'?'", "'??'", 
		"'?.'", "'&&'", "'||'", "'->'", "'=='", "'!='", "'<='", "'>='", "'<-'", 
		"'<<'", "'>>'", "'<|'", "'|>'", "'..'", "'...'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BYTE_ORDER_MARK", "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "NEWLINE", 
		"WS", "TAB", "AS", "BREAK", "CASE", "CAST", "CONTINUE", "DATA", "DO", 
		"ELIF", "ELSE", "FOR", "HIDING", "IMPORT", "IF", "IN", "IS", "LET", "LOOP", 
		"MODULE", "MUT", "NEWTYPE", "OF", "REF", "RETURN", "THEN", "TYPEOF", "WHILE", 
		"YIELD", "PUBLIC", "SYNC", "LINEAR", "SMOOTH", "NULL_LITERAL", "BOOL_LITERAL", 
		"THIS_LITERAL", "IDENTIFIER", "INTEGER_LITERAL", "HEX_INTEGER_LITERAL", 
		"BIN_INTEGER_LITERAL", "REAL_LITERAL", "CHARACTER_LITERAL", "REGULAR_STRING", 
		"VERBATIUM_STRING", "INTERPOLATED_REGULAR_STRING_START", "OPEN_BRACE", 
		"CLOSE_BRACE", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", "CLOSE_BRACKET", 
		"OPEN_ARRAY", "CLOSE_ARRAY", "DOT", "COMMA", "COLON", "SEMICOLON", "PLUS", 
		"MINUS", "STAR", "DIV", "PERCENT", "AMP", "PIPE", "CARET", "BANG", "TILDE", 
		"BIND", "LT", "GT", "WILDCARD", "INTERR", "OP_COALESCING", "OP_COALESCING_ACCESS", 
		"OP_AND", "OP_OR", "OP_ARROW", "OP_EQ", "OP_NE", "OP_LE", "OP_GE", "OP_ASSIGNMENT", 
		"OP_LEFT_SHIFT", "OP_RIGHT_SHIFT", "OP_LEFT_PIPELINE", "OP_RIGHT_PIPELINE", 
		"OP_RANGE", "OP_SPREAD", "OPEN_BRACE_INSIDE", "DOUBLE_QUOTE_INSIDE", "REGULAR_STRING_INSIDE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TeuchiUdonParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TeuchiUdonParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TeuchiUdonParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TeuchiUdonParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TargetContext : ParserRuleContext {
		public TargetResult result;
		public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(TeuchiUdonParser.Eof, 0); }
		public TargetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_target; } }
	}

	[RuleVersion(0)]
	public TargetContext target() {
		TargetContext _localctx = new TargetContext(Context, State);
		EnterRule(_localctx, 0, RULE_target);
		try {
			State = 42;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case FOR:
			case IF:
			case LET:
			case LOOP:
			case MUT:
			case TYPEOF:
			case WHILE:
			case PUBLIC:
			case SYNC:
			case LINEAR:
			case SMOOTH:
			case NULL_LITERAL:
			case BOOL_LITERAL:
			case THIS_LITERAL:
			case IDENTIFIER:
			case INTEGER_LITERAL:
			case HEX_INTEGER_LITERAL:
			case BIN_INTEGER_LITERAL:
			case REAL_LITERAL:
			case CHARACTER_LITERAL:
			case REGULAR_STRING:
			case VERBATIUM_STRING:
			case INTERPOLATED_REGULAR_STRING_START:
			case OPEN_BRACE:
			case OPEN_PAREN:
			case OPEN_BRACKET:
			case OPEN_ARRAY:
			case PLUS:
			case MINUS:
			case BANG:
			case TILDE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38; body();
				State = 39; Match(Eof);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 41; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BodyContext : ParserRuleContext {
		public BodyResult result;
		public TopStatementContext[] topStatement() {
			return GetRuleContexts<TopStatementContext>();
		}
		public TopStatementContext topStatement(int i) {
			return GetRuleContext<TopStatementContext>(i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_body; } }
	}

	[RuleVersion(0)]
	public BodyContext body() {
		BodyContext _localctx = new BodyContext(Context, State);
		EnterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 44; topStatement();
				}
				}
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( ((((_la - 16)) & ~0x3f) == 0 && ((1L << (_la - 16)) & ((1L << (FOR - 16)) | (1L << (IF - 16)) | (1L << (LET - 16)) | (1L << (LOOP - 16)) | (1L << (MUT - 16)) | (1L << (TYPEOF - 16)) | (1L << (WHILE - 16)) | (1L << (PUBLIC - 16)) | (1L << (SYNC - 16)) | (1L << (LINEAR - 16)) | (1L << (SMOOTH - 16)) | (1L << (NULL_LITERAL - 16)) | (1L << (BOOL_LITERAL - 16)) | (1L << (THIS_LITERAL - 16)) | (1L << (IDENTIFIER - 16)) | (1L << (INTEGER_LITERAL - 16)) | (1L << (HEX_INTEGER_LITERAL - 16)) | (1L << (BIN_INTEGER_LITERAL - 16)) | (1L << (REAL_LITERAL - 16)) | (1L << (CHARACTER_LITERAL - 16)) | (1L << (REGULAR_STRING - 16)) | (1L << (VERBATIUM_STRING - 16)) | (1L << (INTERPOLATED_REGULAR_STRING_START - 16)) | (1L << (OPEN_BRACE - 16)) | (1L << (OPEN_PAREN - 16)) | (1L << (OPEN_BRACKET - 16)) | (1L << (OPEN_ARRAY - 16)) | (1L << (PLUS - 16)) | (1L << (MINUS - 16)) | (1L << (BANG - 16)) | (1L << (TILDE - 16)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopStatementContext : ParserRuleContext {
		public TopStatementResult result;
		public TopStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topStatement; } }
	 
		public TopStatementContext() { }
		public virtual void CopyFrom(TopStatementContext context) {
			base.CopyFrom(context);
			this.result = context.result;
		}
	}
	public partial class VarBindTopStatementContext : TopStatementContext {
		public VarBindContext varBind() {
			return GetRuleContext<VarBindContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(TeuchiUdonParser.SEMICOLON, 0); }
		public VarAttrContext[] varAttr() {
			return GetRuleContexts<VarAttrContext>();
		}
		public VarAttrContext varAttr(int i) {
			return GetRuleContext<VarAttrContext>(i);
		}
		public VarBindTopStatementContext(TopStatementContext context) { CopyFrom(context); }
	}
	public partial class ExprTopStatementContext : TopStatementContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(TeuchiUdonParser.SEMICOLON, 0); }
		public ExprTopStatementContext(TopStatementContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public TopStatementContext topStatement() {
		TopStatementContext _localctx = new TopStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_topStatement);
		int _la;
		try {
			State = 61;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new VarBindTopStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 52;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << SYNC) | (1L << LINEAR) | (1L << SMOOTH))) != 0)) {
					{
					{
					State = 49; varAttr();
					}
					}
					State = 54;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 55; varBind();
				State = 56; Match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new ExprTopStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 58; expr(0);
				State = 59; Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarAttrContext : ParserRuleContext {
		public VarAttrResult result;
		public VarAttrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varAttr; } }
	 
		public VarAttrContext() { }
		public virtual void CopyFrom(VarAttrContext context) {
			base.CopyFrom(context);
			this.result = context.result;
		}
	}
	public partial class SyncVarAttrContext : VarAttrContext {
		public ITerminalNode SYNC() { return GetToken(TeuchiUdonParser.SYNC, 0); }
		public SyncVarAttrContext(VarAttrContext context) { CopyFrom(context); }
	}
	public partial class SmoothVarAttrContext : VarAttrContext {
		public ITerminalNode SMOOTH() { return GetToken(TeuchiUdonParser.SMOOTH, 0); }
		public SmoothVarAttrContext(VarAttrContext context) { CopyFrom(context); }
	}
	public partial class PublicVarAttrContext : VarAttrContext {
		public ITerminalNode PUBLIC() { return GetToken(TeuchiUdonParser.PUBLIC, 0); }
		public PublicVarAttrContext(VarAttrContext context) { CopyFrom(context); }
	}
	public partial class LinearVarAttrContext : VarAttrContext {
		public ITerminalNode LINEAR() { return GetToken(TeuchiUdonParser.LINEAR, 0); }
		public LinearVarAttrContext(VarAttrContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public VarAttrContext varAttr() {
		VarAttrContext _localctx = new VarAttrContext(Context, State);
		EnterRule(_localctx, 6, RULE_varAttr);
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PUBLIC:
				_localctx = new PublicVarAttrContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 63; Match(PUBLIC);
				}
				break;
			case SYNC:
				_localctx = new SyncVarAttrContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 64; Match(SYNC);
				}
				break;
			case LINEAR:
				_localctx = new LinearVarAttrContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 65; Match(LINEAR);
				}
				break;
			case SMOOTH:
				_localctx = new SmoothVarAttrContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 66; Match(SMOOTH);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarBindContext : ParserRuleContext {
		public VarBindResult result;
		public int tableIndex;
		public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		public ITerminalNode BIND() { return GetToken(TeuchiUdonParser.BIND, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode MUT() { return GetToken(TeuchiUdonParser.MUT, 0); }
		public VarBindContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varBind; } }
	}

	[RuleVersion(0)]
	public VarBindContext varBind() {
		VarBindContext _localctx = new VarBindContext(Context, State);
		EnterRule(_localctx, 8, RULE_varBind);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==MUT) {
				{
				State = 69; Match(MUT);
				}
			}

			State = 72; varDecl(true);
			State = 73; Match(BIND);
			State = 74; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDeclContext : ParserRuleContext {
		public bool isActual;
		public VarDeclResult result;
		public VarDeclContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public VarDeclContext(ParserRuleContext parent, int invokingState, bool isActual)
			: base(parent, invokingState)
		{
			this.isActual = isActual;
		}
		public override int RuleIndex { get { return RULE_varDecl; } }
	 
		public VarDeclContext() { }
		public virtual void CopyFrom(VarDeclContext context) {
			base.CopyFrom(context);
			this.isActual = context.isActual;
			this.result = context.result;
		}
	}
	public partial class UnitVarDeclContext : VarDeclContext {
		public ITerminalNode OPEN_PAREN() { return GetToken(TeuchiUdonParser.OPEN_PAREN, 0); }
		public ITerminalNode CLOSE_PAREN() { return GetToken(TeuchiUdonParser.CLOSE_PAREN, 0); }
		public UnitVarDeclContext(VarDeclContext context) { CopyFrom(context); }
	}
	public partial class TupleVarDeclContext : VarDeclContext {
		public ITerminalNode OPEN_PAREN() { return GetToken(TeuchiUdonParser.OPEN_PAREN, 0); }
		public QualifiedVarContext[] qualifiedVar() {
			return GetRuleContexts<QualifiedVarContext>();
		}
		public QualifiedVarContext qualifiedVar(int i) {
			return GetRuleContext<QualifiedVarContext>(i);
		}
		public ITerminalNode CLOSE_PAREN() { return GetToken(TeuchiUdonParser.CLOSE_PAREN, 0); }
		public ITerminalNode[] COMMA() { return GetTokens(TeuchiUdonParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(TeuchiUdonParser.COMMA, i);
		}
		public TupleVarDeclContext(VarDeclContext context) { CopyFrom(context); }
	}
	public partial class SingleVarDeclContext : VarDeclContext {
		public QualifiedVarContext qualifiedVar() {
			return GetRuleContext<QualifiedVarContext>(0);
		}
		public SingleVarDeclContext(VarDeclContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public VarDeclContext varDecl(bool isActual) {
		VarDeclContext _localctx = new VarDeclContext(Context, State, isActual);
		EnterRule(_localctx, 10, RULE_varDecl);
		int _la;
		try {
			State = 90;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				_localctx = new UnitVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 76; Match(OPEN_PAREN);
				State = 77; Match(CLOSE_PAREN);
				}
				break;
			case 2:
				_localctx = new SingleVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 78; qualifiedVar();
				}
				break;
			case 3:
				_localctx = new TupleVarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 79; Match(OPEN_PAREN);
				State = 80; qualifiedVar();
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 81; Match(COMMA);
					State = 82; qualifiedVar();
					}
					}
					State = 87;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 88; Match(CLOSE_PAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedVarContext : ParserRuleContext {
		public QualifiedVarResult result;
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(TeuchiUdonParser.COLON, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public QualifiedVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedVar; } }
	}

	[RuleVersion(0)]
	public QualifiedVarContext qualifiedVar() {
		QualifiedVarContext _localctx = new QualifiedVarContext(Context, State);
		EnterRule(_localctx, 12, RULE_qualifiedVar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; identifier();
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 93; Match(COLON);
				State = 94; expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		public IdentifierResult result;
		public ITerminalNode IDENTIFIER() { return GetToken(TeuchiUdonParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(Context, State);
		EnterRule(_localctx, 14, RULE_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
